--- a/app/src/main/res/drawable/layout/activity_main.xml
+++ b/app/src/main/res/drawable/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainBackgroundColor"
-    tools:context=".MainActivity">
+    tools:context=".com.example.tasklist.MainActivity">
 
 
     <androidx.core.widget.NestedScrollView
